0.9.0
----

[dev] moved download_forwarding_history into logic package
[dev] no need to call update_rect needlessly, significant speedup in
    rendering
[dev] add orb.kvs to hidden imports list
Attributes Editor now shows fees earned
[dev] added some windows debugging
[dev] build automation


v0.8.0
------

[dev] make sure Window object exists before maximizing
[dev] build on main, not master
[dev] build automation
[dev] build on main - not master
[dev] build targets need different names
[dev] osx and linux builds automated
[dev] linux build automated
[dev] linux build
[dev] cater for python < 3.9
[dev] channel's local_balance_include_pending typo (not reading actual
    pending pending htlcs)
ubuntu build [dev]
linux build [dev]
linux build [dev]
save app store credentials after login
app store login dialog regression
app is sluggish in mock mode
linux build [dev]
[dev] build system
OSX build
[dev] missed comma in settings.json (typo)
fast-forward events on app resumption #168
Feature Request - Channel sort options #167


v0.7.0
------

version bump
Kivy selection handles crash orb #157
when quitting the app from the console, it saves the 'q' character in
    the buffer #166 the console doesn't save the last input #165
When in the console, trouble going back to channels screen #161
[dev] import Lnd in attributes editor to resolve "offline" label being
    displayed
mouse down event in the channels widget overrides node background
    color #98
Update issue templates
delete tls.cert on app exit #162
likely forgot to check in [dev]
removed old code [dev]
updated build system [dev]
updated SECURITY.md
encrypt tls cert and macroon in orb.ini file #152
save tls.cert into a temp file, not main data directory #151
channel policies now entirely managed by the Channel class [dev]
in app store server, repo ref before use [dev]
docs
write SECURITY.md #154
organizing files in appstore [dev]


v0.6.0
------

appstore app icons, and appstore login dialog